# nvidia-tal

./: README.md  meson.build  meson_options.txt
lib/: meson.build  tal.cpp  tal_shmem.cpp  tal_smbus.cpp
lib/include/: meson.build  tal.hpp  tal_module.hpp  tal_shmem.hpp  tal_smbus.hpp
smbus-telemetry-target/lib/: smbus_telemetry_target_api.cpp  smbus_telemetry_update.cpp
smbus-telemetry-target/lib/include/: error.hpp  smbus_telemetry_target_api.hpp  smbus_telemetry_update.hpp
smbus-telemetry-target/test/: smbus_telemetry_target_utest.cpp
smbus-telemetry-target/test/config/: row2-failure.csv
